// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should inject metadata for valid pools 1`] = `
"<!DOCTYPE html>
<html translate="no">
  <head>
    <script type="module">import { injectIntoGlobalHook } from "/@react-refresh";
injectIntoGlobalHook(window);
window.$RefreshReg$ = () => {};
window.$RefreshSig$ = () => (type) => type;</script>

    <script type="module" src="/@vite/client"></script>

    <meta charset="utf-8" />

    <title>Uniswap Interface</title>

    <!-- Vite uses / for public assets instead of %PUBLIC_URL% -->
    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
    <link rel="apple-touch-icon" sizes="192x192" href="/images/192x192_App_Icon.png" />
    <link rel="apple-touch-icon" sizes="512x512" href="/images/512x512_App_Icon.png" />

    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
    <meta name="theme-color" content="#fff" />
    <meta name="format-detection" content="telephone=no">

    <!-- CSP will be injected here -->

    <link rel="preconnect" href="https://interface.gateway.uniswap.org/" crossorigin/>
    <link rel="preconnect" href="https://mainnet.infura.io/" crossorigin/>

    <link rel="preload" href="/fonts/Basel-Grotesk-Book.woff2" as="font" type="font/woff2" crossorigin />
    <link rel="preload" href="/fonts/Basel-Grotesk-Medium.woff2" as="font" type="font/woff2" crossorigin />

    <style>
      * {
        font-family: 'Basel', sans-serif;
        box-sizing: border-box;
      }

      /**
        Explicitly load Basel var from public/ so it does not block LCP's critical path.
      */
      @font-face {
        font-family: 'Basel';
        font-weight: 535;
        font-style: normal;
        font-display: block;
        src: 
          url('/fonts/Basel-Grotesk-Medium.woff2') format('woff2'),
          url('/fonts/Basel-Grotesk-Medium.woff') format('woff');
      }

      @font-face {
        font-family: 'Basel';
        font-weight: 485;
        font-style: normal;
        font-display: block;
        src: 
          url('/fonts/Basel-Grotesk-Book.woff2') format('woff2'),
          url('/fonts/Basel-Grotesk-Book.woff') format('woff');
      }

      @supports (font-variation-settings: normal) {
        * {
          font-family: 'Basel', sans-serif;
        }
      }

      html,
      body {
        margin: 0;
        padding: 0;
      }

      /* Only apply overflow-x: hidden on desktop */
      @media (min-width: 768px) {
        html {
          overflow-x: hidden;
        }
      }

      button {
        user-select: none;
      }

      html {
        font-size: 16px;
        font-weight: 485;
        font-variant: none;
        font-smooth: always;
        text-rendering: optimizeLegibility !important;
        -webkit-font-smoothing: antialiased !important;
        -moz-osx-font-smoothing: grayscale;
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
      }

      html,
      body,
      #root {
        min-height: 100%;
      }

      @media (prefers-color-scheme: dark) {
        html {
          background: linear-gradient(rgb(19, 19, 19) 0%, rgb(19, 19, 19) 100%);
        }
      }

      @media (prefers-color-scheme: light) {
        html {
          background: radial-gradient(100% 100% at 50% 0%, rgba(255, 184, 226, 0) 0%, rgba(255, 255, 255, 0) 100%), rgb(255, 255, 255);
        }
      }
    </style>
  <meta property="og:title" content="WBTC/WETH on Uniswap" data-rh="true">
<meta property="og:image" content="http://localhost:3000/api/image/pools/ethereum/0xCBCdF9626bC03E24f779434178A73a0B4bad62eD" data-rh="true">
<meta property="og:image:width" content="1200" data-rh="true">
<meta property="og:image:height" content="630" data-rh="true">
<meta property="og:image:alt" content="WBTC/WETH on Uniswap" data-rh="true">
<meta property="og:type" content="website" data-rh="true">
<meta property="og:url" content="http://localhost:3000/explore/pools/ethereum/0xCBCdF9626bC03E24f779434178A73a0B4bad62eD" data-rh="true">
<meta property="twitter:card" content="summary_large_image" data-rh="true">
<meta property="twitter:title" content="WBTC/WETH on Uniswap" data-rh="true">
<meta property="twitter:image" content="http://localhost:3000/api/image/pools/ethereum/0xCBCdF9626bC03E24f779434178A73a0B4bad62eD" data-rh="true">
<meta property="twitter:image:alt" content="WBTC/WETH on Uniswap" data-rh="true">
</head>

  <body>
    <noscript>You need to enable JavaScript to run this app.</noscript>

    <div id="root"></div>
    <div id="background-radial-gradient"></div>

    <script type="module" src="/zone-events.js"></script>
    <!-- Vite entry point -->
    <script type="module" src="/src/index.tsx"></script>
  </body>
</html>
"
`;

exports[`should inject metadata for valid pools 2`] = `
"<!DOCTYPE html>
<html translate="no">
  <head>
    <script type="module">import { injectIntoGlobalHook } from "/@react-refresh";
injectIntoGlobalHook(window);
window.$RefreshReg$ = () => {};
window.$RefreshSig$ = () => (type) => type;</script>

    <script type="module" src="/@vite/client"></script>

    <meta charset="utf-8" />

    <title>Uniswap Interface</title>

    <!-- Vite uses / for public assets instead of %PUBLIC_URL% -->
    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
    <link rel="apple-touch-icon" sizes="192x192" href="/images/192x192_App_Icon.png" />
    <link rel="apple-touch-icon" sizes="512x512" href="/images/512x512_App_Icon.png" />

    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
    <meta name="theme-color" content="#fff" />
    <meta name="format-detection" content="telephone=no">

    <!-- CSP will be injected here -->

    <link rel="preconnect" href="https://interface.gateway.uniswap.org/" crossorigin/>
    <link rel="preconnect" href="https://mainnet.infura.io/" crossorigin/>

    <link rel="preload" href="/fonts/Basel-Grotesk-Book.woff2" as="font" type="font/woff2" crossorigin />
    <link rel="preload" href="/fonts/Basel-Grotesk-Medium.woff2" as="font" type="font/woff2" crossorigin />

    <style>
      * {
        font-family: 'Basel', sans-serif;
        box-sizing: border-box;
      }

      /**
        Explicitly load Basel var from public/ so it does not block LCP's critical path.
      */
      @font-face {
        font-family: 'Basel';
        font-weight: 535;
        font-style: normal;
        font-display: block;
        src: 
          url('/fonts/Basel-Grotesk-Medium.woff2') format('woff2'),
          url('/fonts/Basel-Grotesk-Medium.woff') format('woff');
      }

      @font-face {
        font-family: 'Basel';
        font-weight: 485;
        font-style: normal;
        font-display: block;
        src: 
          url('/fonts/Basel-Grotesk-Book.woff2') format('woff2'),
          url('/fonts/Basel-Grotesk-Book.woff') format('woff');
      }

      @supports (font-variation-settings: normal) {
        * {
          font-family: 'Basel', sans-serif;
        }
      }

      html,
      body {
        margin: 0;
        padding: 0;
      }

      /* Only apply overflow-x: hidden on desktop */
      @media (min-width: 768px) {
        html {
          overflow-x: hidden;
        }
      }

      button {
        user-select: none;
      }

      html {
        font-size: 16px;
        font-weight: 485;
        font-variant: none;
        font-smooth: always;
        text-rendering: optimizeLegibility !important;
        -webkit-font-smoothing: antialiased !important;
        -moz-osx-font-smoothing: grayscale;
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
      }

      html,
      body,
      #root {
        min-height: 100%;
      }

      @media (prefers-color-scheme: dark) {
        html {
          background: linear-gradient(rgb(19, 19, 19) 0%, rgb(19, 19, 19) 100%);
        }
      }

      @media (prefers-color-scheme: light) {
        html {
          background: radial-gradient(100% 100% at 50% 0%, rgba(255, 184, 226, 0) 0%, rgba(255, 255, 255, 0) 100%), rgb(255, 255, 255);
        }
      }
    </style>
  <meta property="og:title" content="DAI/MKR on Uniswap" data-rh="true">
<meta property="og:image" content="http://localhost:3000/api/image/pools/ethereum/0x517F9dD285e75b599234F7221227339478d0FcC8" data-rh="true">
<meta property="og:image:width" content="1200" data-rh="true">
<meta property="og:image:height" content="630" data-rh="true">
<meta property="og:image:alt" content="DAI/MKR on Uniswap" data-rh="true">
<meta property="og:type" content="website" data-rh="true">
<meta property="og:url" content="http://localhost:3000/explore/pools/ethereum/0x517F9dD285e75b599234F7221227339478d0FcC8" data-rh="true">
<meta property="twitter:card" content="summary_large_image" data-rh="true">
<meta property="twitter:title" content="DAI/MKR on Uniswap" data-rh="true">
<meta property="twitter:image" content="http://localhost:3000/api/image/pools/ethereum/0x517F9dD285e75b599234F7221227339478d0FcC8" data-rh="true">
<meta property="twitter:image:alt" content="DAI/MKR on Uniswap" data-rh="true">
</head>

  <body>
    <noscript>You need to enable JavaScript to run this app.</noscript>

    <div id="root"></div>
    <div id="background-radial-gradient"></div>

    <script type="module" src="/zone-events.js"></script>
    <!-- Vite entry point -->
    <script type="module" src="/src/index.tsx"></script>
  </body>
</html>
"
`;

exports[`should inject metadata for valid pools 3`] = `
"<!DOCTYPE html>
<html translate="no">
  <head>
    <script type="module">import { injectIntoGlobalHook } from "/@react-refresh";
injectIntoGlobalHook(window);
window.$RefreshReg$ = () => {};
window.$RefreshSig$ = () => (type) => type;</script>

    <script type="module" src="/@vite/client"></script>

    <meta charset="utf-8" />

    <title>Uniswap Interface</title>

    <!-- Vite uses / for public assets instead of %PUBLIC_URL% -->
    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
    <link rel="apple-touch-icon" sizes="192x192" href="/images/192x192_App_Icon.png" />
    <link rel="apple-touch-icon" sizes="512x512" href="/images/512x512_App_Icon.png" />

    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
    <meta name="theme-color" content="#fff" />
    <meta name="format-detection" content="telephone=no">

    <!-- CSP will be injected here -->

    <link rel="preconnect" href="https://interface.gateway.uniswap.org/" crossorigin/>
    <link rel="preconnect" href="https://mainnet.infura.io/" crossorigin/>

    <link rel="preload" href="/fonts/Basel-Grotesk-Book.woff2" as="font" type="font/woff2" crossorigin />
    <link rel="preload" href="/fonts/Basel-Grotesk-Medium.woff2" as="font" type="font/woff2" crossorigin />

    <style>
      * {
        font-family: 'Basel', sans-serif;
        box-sizing: border-box;
      }

      /**
        Explicitly load Basel var from public/ so it does not block LCP's critical path.
      */
      @font-face {
        font-family: 'Basel';
        font-weight: 535;
        font-style: normal;
        font-display: block;
        src: 
          url('/fonts/Basel-Grotesk-Medium.woff2') format('woff2'),
          url('/fonts/Basel-Grotesk-Medium.woff') format('woff');
      }

      @font-face {
        font-family: 'Basel';
        font-weight: 485;
        font-style: normal;
        font-display: block;
        src: 
          url('/fonts/Basel-Grotesk-Book.woff2') format('woff2'),
          url('/fonts/Basel-Grotesk-Book.woff') format('woff');
      }

      @supports (font-variation-settings: normal) {
        * {
          font-family: 'Basel', sans-serif;
        }
      }

      html,
      body {
        margin: 0;
        padding: 0;
      }

      /* Only apply overflow-x: hidden on desktop */
      @media (min-width: 768px) {
        html {
          overflow-x: hidden;
        }
      }

      button {
        user-select: none;
      }

      html {
        font-size: 16px;
        font-weight: 485;
        font-variant: none;
        font-smooth: always;
        text-rendering: optimizeLegibility !important;
        -webkit-font-smoothing: antialiased !important;
        -moz-osx-font-smoothing: grayscale;
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
      }

      html,
      body,
      #root {
        min-height: 100%;
      }

      @media (prefers-color-scheme: dark) {
        html {
          background: linear-gradient(rgb(19, 19, 19) 0%, rgb(19, 19, 19) 100%);
        }
      }

      @media (prefers-color-scheme: light) {
        html {
          background: radial-gradient(100% 100% at 50% 0%, rgba(255, 184, 226, 0) 0%, rgba(255, 255, 255, 0) 100%), rgb(255, 255, 255);
        }
      }
    </style>
  <meta property="og:title" content="USDC.e/WLD on Uniswap" data-rh="true">
<meta property="og:image" content="http://localhost:3000/api/image/pools/optimism/0xD1F1baD4c9E6c44DeC1e9bF3B94902205c5Cd6C3" data-rh="true">
<meta property="og:image:width" content="1200" data-rh="true">
<meta property="og:image:height" content="630" data-rh="true">
<meta property="og:image:alt" content="USDC.e/WLD on Uniswap" data-rh="true">
<meta property="og:type" content="website" data-rh="true">
<meta property="og:url" content="http://localhost:3000/explore/pools/optimism/0xD1F1baD4c9E6c44DeC1e9bF3B94902205c5Cd6C3" data-rh="true">
<meta property="twitter:card" content="summary_large_image" data-rh="true">
<meta property="twitter:title" content="USDC.e/WLD on Uniswap" data-rh="true">
<meta property="twitter:image" content="http://localhost:3000/api/image/pools/optimism/0xD1F1baD4c9E6c44DeC1e9bF3B94902205c5Cd6C3" data-rh="true">
<meta property="twitter:image:alt" content="USDC.e/WLD on Uniswap" data-rh="true">
</head>

  <body>
    <noscript>You need to enable JavaScript to run this app.</noscript>

    <div id="root"></div>
    <div id="background-radial-gradient"></div>

    <script type="module" src="/zone-events.js"></script>
    <!-- Vite entry point -->
    <script type="module" src="/src/index.tsx"></script>
  </body>
</html>
"
`;
